Improve Display regulator settings in device trees
Improve the regulator settings in the device trees. There was no
regulator support in the driver but it worked through a misconduct
anyway. So now the support is implemented and the settings of the
regulators are correct.

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -175,6 +175,7 @@
 #endif
 			states = <5000000 0x1
 				3300000 0x0>;
+			enable-active-high;
 		};
 
 		/* CAN */
@@ -929,7 +930,7 @@
 #elif defined(CONFIG_ARMSTONEA9R2_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vlcd>;
 	status = "okay";
 
 #ifdef CONFIG_ARMSTONEA9R2_LVDS0
