--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -227,6 +227,7 @@
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 		/* CAN */
@@ -443,7 +444,7 @@
 
 	lcd: lcd@0 {
 		compatible = "fsl,lcd";
-		power-supply = <&reg_vlcd>;
+		lcd-supply = <&reg_vlcd>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_ipu1_ctrl &pinctrl_ipu1_dat>;
 		status = "disabled";
@@ -1150,7 +1151,7 @@
 #elif defined(CONFIG_ARMSTONEA9_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vlcd>;
 	status = "okay";
 
 #ifdef CONFIG_ARMSTONEA9_LVDS0
