--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -199,6 +199,7 @@
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 #ifdef CONFIG_NETDCUA9_5V_LVDS
@@ -403,7 +404,7 @@
 
 	lcd: lcd@0 {
 		compatible = "fsl,lcd";
-		power-supply = <&reg_vlcd>;
+		lcd-supply = <&reg_vlcd>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_ipu1_ctrl &pinctrl_ipu1_dat>;
 		status = "disabled";
@@ -863,7 +864,7 @@
 #elif defined(CONFIG_NETDCUA9_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vlcd>;
 	status = "okay";
 
 #ifdef CONFIG_NETDCUA9_LVDS0
