--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -310,6 +310,7 @@
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 #if defined(CONFIG_PICOMODA9_CAN_A) || defined(CONFIG_PICOMODA9_CAN_B)
@@ -535,7 +536,7 @@
 
 	lcd: lcd@0 {
 		compatible = "fsl,lcd";
-		power-supply = <&reg_vlcd>;
+		lcd-supply = <&reg_vlcd>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_ipu1_ctrl &pinctrl_ipu1_dat>;
 		status = "disabled";
@@ -1065,7 +1066,7 @@
 #if defined(CONFIG_PICOMODA9_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vlcd>;
 	status = "okay";
 
 #ifdef CONFIG_PICOMODA9_LVDS0
