--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -92,11 +92,14 @@
 		mxcfb1 = &mxcfb1;
 		mxcfb2 = &mxcfb2;
 		mxcfb3 = &mxcfb3;
-#ifdef CONFIG_QBLISSA9_HDMI
-		i2c6 = &i2c_gpio_hdmi;
+#ifdef CONFIG_QBLISSA9_I2C_B
+		i2c3 = &i2c_gpio_b;
 #endif
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
-		i2c7 = &i2c_gpio_cam1;
+#ifdef CONFIG_QBLISSA9_I2C_C
+		i2c4 = &i2c_gpio_c;
+#endif
+#ifdef CONFIG_QBLISSA9_HDMI
+		i2c5 = &i2c_gpio_hdmi;
 #endif
 		};
 
@@ -152,7 +155,7 @@
 		};
 #endif
 
-		/* backlight ldb */
+		/* LVDS backlight */
 		reg_ldb_bl: backlight_ldb {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
@@ -162,13 +165,14 @@
 			enable-active-high;
 		};
 
-		/* LCD power on voltage */
-		reg_vlcd: vlcd {
+		/* LVDS logic supply power */
+		reg_vldb: vldb {
 			compatible = "regulator-fixed";
-			regulator-name = "VLCD";
+			regulator-name = "VLDB";
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 		/* CAN */
@@ -177,7 +181,7 @@
 			regulator-name = "can";
 		};
 
-#ifdef CONFIG_QBLISSA9_CAMERA
+#ifdef CONFIG_QBLISSA9_PARALLEL_CAMERA
 		reg_camera_dovdd: camera_dovdd {
 			compatible = "regulator-fixed";
 			regulator-name = "DOVDD-supply";
@@ -198,7 +202,7 @@
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <1500000>;
 		};
-#endif /* CONFIG_QBLISSA9_CAMERA */
+#endif /* CONFIG_QBLISSA9_PARALLEL_CAMERA */
 	};
 
 	/* F&S board information */
@@ -208,30 +212,44 @@
 		ecc_strength = "8";
 	};
 
-#ifdef CONFIG_QBLISSA9_HDMI
-	i2c_gpio_hdmi: i2c-gpio-hdmi {
+#ifdef CONFIG_QBLISSA9_I2C_B
+	i2c_gpio_b: i2c_gpio_b {
 		compatible = "i2c-gpio";
-		gpios = <&gpio2 14 GPIO_ACTIVE_HIGH /* sda */
-			 &gpio2 15 GPIO_ACTIVE_HIGH /* scl */
+		gpios = <&gpio4 21 GPIO_ACTIVE_HIGH /* sda */
+			 &gpio4 22 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c6_gpio>;
-		//i2c-gpio,sda-open-drain;
-		//i2c-gpio,scl-open-drain;
+		pinctrl-0 = <&pinctrl_i2c_gpio_b>;
 		i2c-gpio,delay-us = <2>;	/* ~100 kHz */
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
 #endif
 
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
-	i2c_gpio_cam1: i2c-gpio-cam1 {
+#ifdef CONFIG_QBLISSA9_I2C_C
+	i2c_gpio_c: i2c_gpio_c {
 		compatible = "i2c-gpio";
-		gpios = <&gpio4 21 GPIO_ACTIVE_HIGH /* sda */
-			 &gpio4 22 GPIO_ACTIVE_HIGH /* scl */
+		gpios = <&gpio2 12 GPIO_ACTIVE_HIGH /* sda */
+			 &gpio2 13 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c7_gpio>;
+		pinctrl-0 = <&pinctrl_i2c_gpio_c>;
+		i2c-gpio,delay-us = <2>;	/* ~100 kHz */
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+#endif
+
+#ifdef CONFIG_QBLISSA9_HDMI
+	i2c_gpio_hdmi: i2c_gpio_hdmi {
+		compatible = "i2c-gpio";
+		gpios = <&gpio2 14 GPIO_ACTIVE_HIGH /* sda */
+			 &gpio2 15 GPIO_ACTIVE_HIGH /* scl */
+			>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c_gpio_hdmi>;
+		//i2c-gpio,sda-open-drain;
+		//i2c-gpio,scl-open-drain;
 		i2c-gpio,delay-us = <2>;	/* ~100 kHz */
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -364,12 +382,12 @@
 		fb-names = "mxs-lcdif1";
 	};
 
-	/* Serial MIPI camera interface */
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
+#ifdef CONFIG_QBLISSA9_PARALLEL_CAMERA
+	/* Parallel camera interface */
 	v4l2_cap_0 {
 		compatible = "fsl,imx6q-v4l2-capture";
 		ipu_id = <0>;
-		csi_id = <1>;
+		csi_id = <0>;
 		mclk_source = <0>;
 		status = "okay";
 	};
@@ -533,17 +551,7 @@
 };
 #endif
 
-#ifdef CONFIG_QBLISSA9_I2C_C
-&i2c1 {
-	clock-frequency = <100000>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c1>;
-	status = "okay";
-	/* define ADC here */
-};
-#endif /* CONFIG_QBLISSA9_I2C_C */
-
-#ifdef CONFIG_QBLISSA9_I2C_B
+/* I2C2 is used for internal communication (RTC, PMIC), always active */
 &i2c2{
 	clock-frequency = <200000>;
 	pinctrl-names = "default";
@@ -556,10 +564,11 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
 	};
-/* if you want to use pmic you have to set these regulators. But the pmic
- * control register will be set by the UBoot so if you want use it you have to
+/*
+ * If you want to use PMIC you have to set these regulators. But the PMIC
+ * control register will be set by UBoot so if you want use it you have to
  * implement that the pmu_reg_core register will be set to "Power FET switched
- * full on", because this set the bypass, so the pmic controlls the CPU.
+ * fully on", because this sets the bypass and PMIC can control the voltage.
  */
 #if 0
 	pmic: pfuze100@08 {
@@ -667,34 +676,40 @@
 	};
 #endif
 };
-#endif /* CONFIG_QBLISSA9_I2C_B */
 
 #ifdef CONFIG_QBLISSA9_I2C_A
+/* I2C_A implemented via I2C3 */
 &i2c3 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3>;
 	status = "okay";
 
+	/* Add devices here */
+};
+#endif /* CONFIG_QBLISSA9_I2C_A */
+
+#ifdef CONFIG_QBLISSA9_I2C_B
+/* I2C_B implemented as Soft-I2C (SMB, with IRQ, used for touches) */
+&i2c_gpio_b {
 #ifdef CONFIG_QBLISSA9_4WTOUCH_SX8655
-	/* 4/5 wire analog resistive touch, controller on QBLISS SKIT */
-	sx8654@49 {
+	/* 4/5 wire analog resistive touch */
+	sx8654@48 {
 		compatible = "semtech,sx8654";
-		reg = <0x49>;
+		reg = <0x48>;
 		touchrate = <0x30>;
 		powdly = <0x06>;
 		filt = <0x02>;
 		setdly = <0x08>;
 		pinctrl-names = "default";
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
-		//reset-gpio = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
 	};
 #endif
 
 #ifdef CONFIG_QBLISSA9_CAPTOUCH_FT5x06
-	/* F&S driver V3.0 on Touch Connector (I2C) */
+	/* F&S driver V3.0 */
 	ft5x06_ts@38 {
 		compatible = "FocalTech,ft5306";
 		reg = <0x38>;
@@ -702,28 +717,56 @@
 		touchscreen-size-x = <800>;
 		touchscreen-size-y = <480>;
 		threshold = <25>;
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
-		//reset-gpios = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
 		linux,wakeup;
 	};
 #endif
 
 #ifdef CONFIG_QBLISSA9_CAPTOUCH_MXT224
-	/* Atmel PCAP touch on Touch Connector (I2C) */
+	/* Atmel PCAP touch */
 	mxt224@4a {
 		compatible = "atmel,maxtouch";
 		reg = <0x4a>;
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
 		atmel,cfg_name = "atmel/mxt224.cfg";
-		//atmel,reset-gpio = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		atmel,reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_QBLISSA9_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio4>;
+		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_QBLISSA9_CAPTOUCH_ILINK
+	/* Ilink PCAP touch */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
 	};
 #endif
 };
-#endif /* CONFIG_QBLISSA9_I2C_A */
+#endif
+
+#ifdef CONFIG_QBLISSA9_I2C_C
+/* I2C_C implemented as Soft-I2C */
+&i2c_gpio_c {
+	/* Add devices here */
+};
+#endif
 
 #ifdef CONFIG_QBLISSA9_HDMI
 &i2c_gpio_hdmi {
@@ -734,48 +777,60 @@
 };
 #endif
 
-#if 0 /* NOT TESTED */
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
-&i2c_gpio_cam1 {
-	ov564x_mipi: ov564x_mipi@3c {
-	compatible = "ovti,ov564x_mipi";
-	reg = <0x3c>;
+#ifdef CONFIG_QBLISSA9_PARALLEL_CAMERA /* NOT TESTED */
+&i2c1 {
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_ipu1_2>;
-	clocks = <&clks 201>;
-	clock-names = "csi_mclk";
-	DOVDD-supply = <&reg_camera_dovdd>;
-	AVDD-supply = <&reg_camera_avdd>;
-	DVDD-supply = <&reg_camera_dvdd>;
-	pwdn-gpios = <&gpio5 24 GPIO_ACTIVE_HIGH>;
-	rst-gpios = <&gpio5 23 GPIO_ACTIVE_HIGH>;
-	csi_id = <1>;
-	mclk = <24000000>;
-	mclk_source = <0>;
+	pinctrl-0 = <&pinctrl_i2c1>;
+	status = "okay";
+
+	ov9665: ov9665@30 {
+		compatible = "ovti,ov9665";
+		reg = <0x30>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_ipu1_2>;
+		clocks = <&clks IMX6QDL_CLK_CKO>;
+		clock-names = "csi_mclk";
+		DOVDD-supply = <&reg_camera_dovdd>; /* 1.8v */
+		AVDD-supply = <&reg_camera_avdd>;  /* 2.8v, rev C board is VGEN3
+						rev B board is VGEN5 */
+		DVDD-supply = <&reg_camera_dvdd>;  /* 1.5v*/
+		pwn-gpios = <&gpio5 24 GPIO_ACTIVE_HIGH>;
+		rst-gpios = <&gpio5 23 GPIO_ACTIVE_LOW>;
+		csi_id = <0>;
+		mclk = <24000000>;
+		mclk_source = <0>;
 	};
 };
 #endif
-#endif
 
-/* PWM_B (Pin 196) */
-&pwm1 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm1_1>;
-	status = "okay";
-};
-
-/* Backlight PWM (X6 Pin 8) */
+#ifdef CONFIG_QBLISSA9R2_PWM_A
+/* PWM_A/LVDS_BLT_CTRL, pin 123 */
 &pwm3 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm3_1>;
+	pinctrl-0 = <&pinctrl_pwm3>;
 	status = "okay";
 };
+#endif
 
+
+#ifdef CONFIG_QBLISSA9R2_PWM_B
+/* PWM_B/FAN_PWMOUT, pin 196 */
+&pwm1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm1>;
+	status = "okay";
+};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_C
+/* PWM_C/SPKR, pin 194 */
 &pwm4 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm4_1>;
+	pinctrl-0 = <&pinctrl_pwm4>;
 	status = "okay";
 };
+#endif
 
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
@@ -797,16 +852,6 @@
 };
 #endif
 
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
-&mipi_csi {
-	status = "okay";
-	ipu_id = <0>;
-	csi_id = <1>;
-	v_channel = <0>;
-	lanes = <2>;
-};
-#endif
-
 #ifdef CONFIG_QBLISSA9_WM9715_AUDIO
 &audmux {
 	status = "okay";
@@ -825,6 +870,36 @@
 #endif
 
 #ifdef CONFIG_QBLISSA9_UART_A
+/* UART_A is implemented via UART3 */
+&uart3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart3_1>;
+	fsl,uart-has-rtscts;
+	status = "okay";
+};
+#endif /* CONFIG_QBLISSA9_UART_A */
+
+#ifdef CONFIG_QBLISSA9_UART_B
+/* UART_B is implemented via UART5 */
+&uart5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart5_1>;
+	status = "okay";
+};
+#endif /* CONFIG_QBLISSA9_UART_B */
+
+#ifdef CONFIG_QBLISSA9_UART_C
+/* UART_C is implemented via UART2 */
+&uart2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart2_1>;
+	fsl,uart-has-rtscts;
+	status = "okay";
+};
+#endif /* CONFIG_QBLISSA9_UART_C */
+
+#ifdef CONFIG_QBLISSA9_BLUETOOTH
+/* Bluetooth is accessed via HCI, implemented by UART1 */
 &uart1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1_1>;
@@ -832,34 +907,6 @@
 	status = "okay";
 };
 #endif
-
-#ifdef CONFIG_QBLISSA9_UART_B
-/* UART2 on pins 185-188 (debug port B)*/
-&uart2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart2_1>;
-	fsl,uart-has-rtscts;
-	status = "okay";
-};
-#endif /* CONFIG_QBLISSA9_UART_B */
-
-#ifdef CONFIG_QBLISSA9_UART_C
-/* UART3 TX/RX on pins 23, 25 (port C) */
-&uart3 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart3_1>;
-	fsl,uart-has-rtscts;
-	status = "okay";
-};
-#endif /* CONFIG_QBLISSA9_UART_C */
-
-#ifdef CONFIG_QBLISSA9_UART_E
-&uart5 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart5_1>;
-	status = "okay";
-};
-#endif /* CONFIG_QBLISSA9_UART_E */
 
 &usbotg {
 	pinctrl-names = "default";
@@ -970,7 +1017,7 @@
 #elif defined(CONFIG_QBLISSA9_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vldb>;
 	status = "okay";
 
 #ifdef CONFIG_QBLISSA9_LVDS0
@@ -1036,58 +1083,41 @@
 		/* Pin configs that don't belong anywhere else */
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
+				/* LVDS_PPEN */
+				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x030b0
+
+				/* BACKLIGHT_ON */
+				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x030b0
+
 				/* WDOG1 */
 				MX6QDL_PAD_GPIO_9__WDOG1_B		0x0b0b0
 				/* RTC_IRQ */
 				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x0b0b0
-				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x030b0
-				MX6QDL_PAD_EIM_A18__GPIO2_IO20		0x030b0
-				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x030b0
-				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x030b0
-				MX6QDL_PAD_EIM_DA0__GPIO3_IO00		0x030b0
-				MX6QDL_PAD_EIM_DA1__GPIO3_IO01		0x030b0
-				MX6QDL_PAD_EIM_DA2__GPIO3_IO02		0x030b0
-				MX6QDL_PAD_EIM_DA3__GPIO3_IO03		0x030b0
-				MX6QDL_PAD_EIM_DA4__GPIO3_IO04		0x030b0
-				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x030b0
-				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x030b0
-				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x030b0
-				MX6QDL_PAD_EIM_DA8__GPIO3_IO08		0x030b0
-				MX6QDL_PAD_EIM_DA9__GPIO3_IO09		0x030b0
-				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x030b0
-				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x030b0
-				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x030b0
-				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x030b0
-				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x030b0
-				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x030b0
-				/* SLEEP S5*/
+				/* SUSPEND S5*/
 				MX6QDL_PAD_KEY_COL2__GPIO4_IO10		0x0b0b0
-				/* SUSPEND */
+				/* SUSPEND STAT */
 				MX6QDL_PAD_KEY_ROW2__GPIO4_IO11		0x0b0b0
-				/* DIGON */
-				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x030b0
-				/* LDDC_DATA */
-				MX6QDL_PAD_SD4_DAT4__GPIO2_IO12		0x030b0
-				/* LDDC_CLK */
-				MX6QDL_PAD_SD4_DAT5__GPIO2_IO13		0x030b0
-				/* FAN_TACHOIN */
+				/* FAN_TACHOMETER INPUT */
 				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x030b0
-				/* LID_BTNJ */
+				/* LID_BTN */
 				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x030b0
-				/* SLP_BTNJ */
+				/* SLP_BTN */
 				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x030b0
-				/* BATLOWJ */
+				/* BATTERY LOW */
 				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x030b0
-				/* THRMn */
+				/* THRM */
 				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x0b0b0
-				/* WAKEJ_EXT */
+				/* WAKE */
 				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x030b0
 				/* WDOUT_ENn */
 				MX6QDL_PAD_GPIO_9__GPIO1_IO09		0x0b0b0
-				/* ATA_ACTn */
+				/* WATCHDOG TRIGGER */
+				MX6QDL_PAD_DISP0_DAT7__GPIO4_IO28	0x0b0b0
+				/* SATA_ACT */
 				MX6QDL_PAD_GPIO_18__GPIO7_IO13		0x0b0b0
-				/* BACKLIGHT_On */
-				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x030b0
+
+				/* PCIe-RST, also used as touch reset */
+				MX6QDL_PAD_DISP0_DAT10__GPIO4_IO31	0x030b0
 			>;
 		};
 
@@ -1153,30 +1183,6 @@
 #endif
 
 #ifdef CONFIG_QBLISSA9_UART_A
-		pinctrl_uart1_1: uart1grp-1{
-			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT10__UART1_TX_DATA	0x1b0b1
-				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D19__UART1_CTS_B		0x1b0b1
-				MX6QDL_PAD_EIM_D20__UART1_RTS_B		0x1b0b1
-			>;
-		};
-#endif
-
-#ifdef CONFIG_QBLISSA9_UART_B
-		/* UART2 on pins 185-188 (port B)*/
-		pinctrl_uart2_1: uart2grp-1{
-			fsl,pins = <
-				MX6QDL_PAD_EIM_D26__UART2_TX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D27__UART2_RX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D28__UART2_CTS_B		0x1b0b1
-				MX6QDL_PAD_EIM_D29__UART2_RTS_B		0x1b0b1
-			>;
-		};
-#endif /* CONFIG_QBLISSA9_UART_B */
-
-#ifdef CONFIG_QBLISSA9_UART_C
-		/* UART3 on pins 36, 38 (port C) */
 		pinctrl_uart3_1: uart3grp-1{
 			fsl,pins = <
 				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b1
@@ -1187,11 +1193,33 @@
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9_UART_E
+#ifdef CONFIG_QBLISSA9_UART_B
 		pinctrl_uart5_1: uart5grp-1{
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL1__UART5_TX_DATA	0x1b0b1
 				MX6QDL_PAD_KEY_ROW1__UART5_RX_DATA	0x1b0b1
+			>;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9_UART_C
+		pinctrl_uart2_1: uart2grp-1{
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D26__UART2_TX_DATA	0x1b0b1
+				MX6QDL_PAD_EIM_D27__UART2_RX_DATA	0x1b0b1
+				MX6QDL_PAD_EIM_D28__UART2_CTS_B		0x1b0b1
+				MX6QDL_PAD_EIM_D29__UART2_RTS_B		0x1b0b1
+			>;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9_BLUETOOTH
+		pinctrl_uart1_1: uart1grp-1{
+			fsl,pins = <
+				MX6QDL_PAD_CSI0_DAT10__UART1_TX_DATA	0x1b0b1
+				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA	0x1b0b1
+				MX6QDL_PAD_EIM_D19__UART1_CTS_B		0x1b0b1
+				MX6QDL_PAD_EIM_D20__UART1_RTS_B		0x1b0b1
 			>;
 		};
 #endif
@@ -1332,27 +1360,8 @@
 			>;
 		};
 #endif
-#ifdef CONFIG_QBLISSA9_I2C_C
-		pinctrl_i2c1: i2c1grp {
-			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b1
-				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b1
-			>;
-		};
-#endif
-
-#ifdef CONFIG_QBLISSA9_I2C_B
-		/* I2C2 as I2C port B  (PMIC, RTC) */
-		pinctrl_i2c2: i2c2grp {
-			fsl,pins = <
-				MX6QDL_PAD_KEY_COL3__GPIO4_IO12		0x4001b8b1
-				MX6QDL_PAD_KEY_ROW3__GPIO4_IO13		0x4001b8b1
-			>;
-		};
-#endif
 
 #ifdef CONFIG_QBLISSA9_I2C_A
-		/* I2C_A: Feature Connector (SKIT) */
 		pinctrl_i2c3: i2c3grp-1 {
 			fsl,pins = <
 				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
@@ -1363,8 +1372,37 @@
 		};
 #endif
 
+#ifdef CONFIG_QBLISSA9_I2C_B
+		pinctrl_i2c_gpio_b: i2c_gpio_grp_b {
+			fsl,pins = <
+				MX6QDL_PAD_DISP0_DAT0__GPIO4_IO21	0x17030
+				MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x17030
+				/* IRQ */
+				MX6QDL_PAD_DISP0_DAT2__GPIO4_IO23	0x17000
+			>;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9_I2C_C
+		pinctrl_i2c_gpio_c: i2c_gpio_c_grp {
+			fsl,pins = <
+				/* LDDC_DATA */
+				MX6QDL_PAD_SD4_DAT4__GPIO2_IO12		0x17030
+				/* LDDC_CLK */
+				MX6QDL_PAD_SD4_DAT5__GPIO2_IO13		0x17030
+			>;
+		};
+#endif
+
+		pinctrl_i2c2: i2c2grp {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_COL3__GPIO4_IO12		0x4001b8b1
+				MX6QDL_PAD_KEY_ROW3__GPIO4_IO13		0x4001b8b1
+			>;
+		};
+
 #ifdef CONFIG_QBLISSA9_HDMI
-		pinctrl_i2c6_gpio: i2c6_gpio_grp {
+		pinctrl_i2c_gpio_hdmi: i2c6_gpio_hdmi_grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x03039
 				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x03039
@@ -1372,15 +1410,15 @@
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9_SERIAL_CAMERA
-		pinctrl_i2c7_gpio: i2c7_gpio_grp {
+#ifdef CONFIG_QBLISSA9_PARALLEL_CAMERA
+		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX6QDL_PAD_DISP0_DAT0__GPIO4_IO21	0x07048
-				MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x07048
+				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b1
 			>;
 		};
 
-		pinctrl_ipu1_2: ipu1grp-cam { /* serial camera */
+		pinctrl_ipu1_2: ipu1grp-cam {
 			fsl,pins = <
 				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12	0x80000000
 				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13	0x80000000
@@ -1400,31 +1438,37 @@
 				MX6QDL_PAD_CSI0_DAT5__IPU1_CSI0_DATA05	0x80000000
 			>;
 		};
-#endif
+#endif /* CONFIG_QBLISSA9_PARALLEL_CAMERA */
 
-		pinctrl_pwm1_1: pwm1grp {
-			fsl,pins = <
-				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x110b0
-			>;
-		};
-
-		/* LVDS backlight control - PWM3 */
-		pinctrl_pwm3_1: pwm3grp {
+#ifdef CONFIG_QBLISSA9R2_PWM_A
+		pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT1__PWM3_OUT		0x110b0
 			>;
 		};
+#endif
 
-		pinctrl_pwm4_1: pwm4grp {
+#ifdef CONFIG_QBLISSA9R2_PWM_B
+		pinctrl_pwm1: pwm1grp {
+			fsl,pins = <
+				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x110b0
+			>;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_C
+		pinctrl_pwm4: pwm4grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT2__PWM4_OUT		0x110b0
 			>;
 		};
+#endif
 
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
-				/* PCIe-RST */
-				MX6QDL_PAD_DISP0_DAT10__GPIO4_IO31	0x030b0
+				/* PCIE_WAKE */
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x17000
+				/* PCIE_RST: see above in Hog */
 			>;
 		};
 
