--- a/arch/arm/boot/dts/qblissa9r2q.dts
+++ b/arch/arm/boot/dts/qblissa9r2q.dts
@@ -134,23 +134,24 @@ wvga {					\
 /*
  * Configure touch screen:
  *
- * - 4-wire/5-wire analog resistive touch (SX8655), on Touch Connector
- * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
- * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ * - 4-wire analog resisitive touch (WM9715), on AC97 port
+ * - 4-wire/5-wire analog resistive touch (SX8655), on SMB/I2C port
+ * - PCAP touch based on Maxtouch controller (MXT224, etc.), on SMB/I2C port
+ * - PCAP touch based on Focaltech controller (FT5x06), on SMB/I2C port
+ * - PCAP touch based on Sitronix controller (ST1633i), on SMB/I2C port
+ * - PCAP touch based on Ilink controller (ILI12xx), on SMB/I2C port
  *
  * Select none if you do not need touch support.
  */
+#define CONFIG_QBLISSA9R2_4WTOUCH_WM9715
 //#define CONFIG_QBLISSA9R2_4WTOUCH_SX8655
-#define CONFIG_QBLISSA9R2_CAPTOUCH_MXT224
+//#define CONFIG_QBLISSA9R2_CAPTOUCH_MXT224
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_FT5x06
+//#define CONFIG_QBLISSA9R2_CAPTOUCH_SITRONIX
+//#define CONFIG_QBLISSA9R2_CAPTOUCH_ILINK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_QBLISSA9R2_CMA_SIZE	0x14000000
-
-/* Camera connected */
-#define CONFIG_QBLISSA9R2_CAMERA
-#define CONFIG_QBLISSA9R2_HDMI_CEC
-#define CONFIG_QBLISSA9R2_HDMI
 
 /* Camera on serial MIPI CSI interface */
 #define CONFIG_QBLISSA9R2_SERIAL_CAMERA
@@ -164,8 +165,9 @@ wvga {					\
 /* AUDIO */
 #define CONFIG_QBLISSA9R2_WM9715_AUDIO
 
-/* WLAN */
+/* WLAN/BLUETOOTH */
 #define CONFIG_QBLISSA9R2_WLAN
+#define CONFIG_QBLISSA9R2_BLUETOOTH
 
 /* SD_A - On SKIT: Micro-SD Card Slot, CD always low, WP unused, 4 bit */
 #define CONFIG_QBLISSA9R2_SD_A
@@ -175,20 +177,45 @@ wvga {					\
 /* EMMC */
 #define CONFIG_QBLISSA9R2_EMMC
 
-/* I2C */
+/* I2C_A: SDA/SCL on pins 68/66 */
 #define CONFIG_QBLISSA9R2_I2C_A
+
+/* I2C_B: SDA/SCL/IRQ on pins 62/60/64 (SMB) */
 #define CONFIG_QBLISSA9R2_I2C_B
+
+/* I2C_C: SDA/SCL on pins 125/127 (instead of LVDS_DID) */
 #define CONFIG_QBLISSA9R2_I2C_C
 
-/* UART */
-#define CONFIG_QBLISSA9R2_UART_A
-#define CONFIG_QBLISSA9R2_UART_C
-#define CONFIG_QBLISSA9R2_UART_D
-#define CONFIG_QBLISSA9R2_UART_E
+/* I2C_D: SDA/SCL on pins 126/128 (instead of LVDS_BLC) */
+#define CONFIG_QBLISSA9R2_I2C_D
 
-/* SPI */
+/* UART_A: TXD/RXD on 171/177, RTS/CTS on pins 172/178 */
+#define CONFIG_QBLISSA9R2_UART_A
+
+/* UART_B: TXD/RXD on pins 209/208, no RTS/CTS */
+#define CONFIG_QBLISSA9R2_UART_B
+
+/* UART_C: TXD/RXD on pins 186/185, RTS/CTS on pins 188/187 */
+#define CONFIG_QBLISSA9R2_UART_C
+
+/*
+ * UART_D: TXD/RDX on pins 163/161, RTS/CTS on pins 164/162, only available if
+ * Bluetooth is not equipped (hardware option)
+ */
+#define CONFIG_QBLISSA9R2_UART_D
+
+/* SPI_A on pins 199-203 */
 #define CONFIG_QBLISSA9R2_SPI_A
 //#define CONFIG_QBLISSA9R2_SPI_FLASH
+
+/* PWM_A/LVDS_BLT_CTRL on pin 123 */
+#define CONFIG_QBLISSA9R2_PWM_A
+
+/* PWM_B/FAN_PWMOUT on pin 196 */
+#define CONFIG_QBLISSA9R2_PWM_B
+
+/* PWM_C/SPKR on pin 194 */
+#define CONFIG_QBLISSA9R2_PWM_C
 
 #include "imx6q.dtsi"
 #include "qblissa9r2qdl.dtsi"
