--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -91,14 +91,17 @@
 		mxcfb1 = &mxcfb1;
 		mxcfb2 = &mxcfb2;
 		mxcfb3 = &mxcfb3;
-		i2c4 = &i2c_blc;
-		i2c5 = &i2c_lvds;
-#ifdef CONFIG_QBLISSA9R2_HDMI
-		i2c6 = &i2c_gpio_hdmi;
+#ifdef CONFIG_QBLISSA9R2_I2C_C
+		i2c3 = &i2c_gpio_c;
 #endif
-
+#ifdef CONFIG_QBLISSA9R2_I2C_D
+		i2c4 = &i2c_gpio_d;
+#endif
+#ifdef CONFIG_QBLISSA9R2_HDMI
+		i2c5 = &i2c_gpio_hdmi;
+#endif
 #ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
-		i2c7 = &i2c_gpio_cam1;
+		i2c6 = &i2c_gpio_cam1;
 #endif
 	};
 
@@ -162,7 +165,7 @@
 		};
 #endif //###
 
-		/* backlight ldb */
+		/* LVDS backlight */
 		reg_ldb_bl: backlight_ldb {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
@@ -172,13 +175,14 @@
 			enable-active-high;
 		};
 
-		/* LCD power on voltage */
-		reg_vlcd: vlcd {
+		/* LVDS logic supply power */
+		reg_vldb: vldb {
 			compatible = "regulator-fixed";
-			regulator-name = "VLCD";
+			regulator-name = "VLDB";
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 		/* CAN */
@@ -187,7 +191,7 @@
 			regulator-name = "can";
 		};
 
-#ifdef CONFIG_QBLISSA9R2_CAMERA
+#ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
 		reg_camera_dovdd: camera_dovdd {
 			compatible = "regulator-fixed";
 			regulator-name = "DOVDD-supply";
@@ -208,7 +212,7 @@
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <1500000>;
 		};
-#endif /* CONFIG_QBLISSA9R2_CAMERA */
+#endif /* CONFIG_QBLISSA9R2_SERIAL_CAMERA */
 	};
 
 	/* F&S board information */
@@ -225,31 +229,35 @@
 	};
 #endif //###
 
-	i2c_lvds: i2c-gpio-lvds {
+#ifdef CONFIG_QBLISSA9R2_I2C_C
+	i2c_gpio_c: i2c_gpio_c {
 		compatible = "i2c-gpio";
 		gpios = <&gpio2 15 GPIO_ACTIVE_HIGH /* sda */
 			 &gpio2 14 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c5_gpio>;
+		pinctrl-0 = <&pinctrl_i2c_gpio_c>;
 //		i2c-gpio,sda-open-drain;
 //		i2c-gpio,scl-open-drain;
 		i2c-gpio,delay-us = <2>;        /* ~100 kHz */
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
+#endif
 
-	i2c_blc: i2c-gpio-blc {
+#ifdef CONFIG_QBLISSA9R2_I2C_D
+	i2c_gpio_d: i2c_gpio_d {
 		compatible = "i2c-gpio";
 		gpios = <&gpio5 8 GPIO_ACTIVE_HIGH /* sda */
 			 &gpio5 9 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c4_gpio>;
+		pinctrl-0 = <&pinctrl_i2c_gpio_d>;
 		i2c-gpio,delay-us = <2>;        /* ~100 kHz */
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
+#endif
 
 #ifdef CONFIG_QBLISSA9R2_HDMI
 	i2c_gpio_hdmi: i2c-gpio-hdmi {
@@ -258,7 +266,7 @@
 			 &gpio5 11 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c6_gpio>;
+		pinctrl-0 = <&pinctrl_i2c_gpio_hdmi>;
 		//i2c-gpio,sda-open-drain;
 		//i2c-gpio,scl-open-drain;
 		i2c-gpio,delay-us = <2>;        /* ~100 kHz */
@@ -274,7 +282,7 @@
 			 &gpio6 1 GPIO_ACTIVE_HIGH /* scl */
 			>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c7_gpio>;
+		pinctrl-0 = <&pinctrl_i2c_gpio_cam1>;
 		i2c-gpio,delay-us = <2>;        /* ~100 kHz */
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -396,6 +404,7 @@
 #endif
 	};
 
+#if (defined(CONFIG_QBLISSA9R2_LVDS0) || defined(CONFIG_QBLISSA9R2_LVDS1))
 	/* LVDS backlight PWM (PWM3) */
 	backlight_ldb {
 		compatible = "pwm-backlight";
@@ -406,6 +415,7 @@
 		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif1";
 	};
+#endif
 
 	/* Serial MIPI camera interface */
 #ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
@@ -571,7 +581,7 @@
 };
 #endif
 
-#ifdef CONFIG_QBLISSA9R2_I2C_C
+/* I2C1 is used internally (RTC, EEPROM) and for cameras, always active */
 &i2c1{
 	clock-frequency = <200000>;
 	pinctrl-names = "default";
@@ -584,44 +594,63 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
 	};
-};
-#endif /* CONFIG_QBLISSA9R2_I2C_C */
 
-#ifdef CONFIG_QBLISSA9R2_I2C_B
-&i2c2 {
-	clock-frequency = <200000>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c2>;
-	status = "okay";
+#ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
+	ov564x_mipi: ov564x_mipi@3c {
+		compatible = "ovti,ov564x_mipi";
+		reg = <0x3c>;
+		clocks = <&clks 201>;
+		clock-names = "csi_mclk";
+		DOVDD-supply = <&reg_camera_dovdd>;
+		AVDD-supply = <&reg_camera_avdd>;
+		DVDD-supply = <&reg_camera_dvdd>;
+		en-gpios = <&gpio5 24 GPIO_ACTIVE_LOW>;
+		rst-gpios = <&gpio5 23 GPIO_ACTIVE_LOW>;
+		csi_id = <1>;
+		mclk = <24000000>;
+		mclk_source = <0>;
+	};
+#endif
 };
-#endif /* CONFIG_QBLISSA9R2_I2C_B */
 
 #ifdef CONFIG_QBLISSA9R2_I2C_A
+/* I2C_A is implemented via I2C3 */
 &i2c3 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3>;
 	status = "okay";
 
+	/* Add devices here */
+};
+#endif /* CONFIG_QBLISSA9R2_I2C_A */
+
+#ifdef CONFIG_QBLISSA9R2_I2C_B
+/* I2C_B is implemented via I2C2 (SMB, with IRQ, used for touches) */
+&i2c2 {
+	clock-frequency = <200000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_i2c2>;
+	status = "okay";
+
 #ifdef CONFIG_QBLISSA9R2_4WTOUCH_SX8655
-	/* 4/5 wire analog resistive touch, controller on QBLISS SKIT */
-	sx8654@49 {
+	/* 4/5 wire analog resistive touch */
+	sx8654@48 {
 		compatible = "semtech,sx8654";
-		reg = <0x49>;
+		reg = <0x48>;
 		touchrate = <0x30>;
 		powdly = <0x06>;
 		filt = <0x02>;
 		setdly = <0x08>;
 		pinctrl-names = "default";
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
-		//reset-gpio = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
 	};
 #endif
 
 #ifdef CONFIG_QBLISSA9R2_CAPTOUCH_FT5x06
-	/* F&S driver V3.0 on Touch Connector (I2C) */
+	/* F&S driver V3.0 */
 	ft5x06_ts@38 {
 		compatible = "FocalTech,ft5306";
 		reg = <0x38>;
@@ -629,28 +658,63 @@
 		touchscreen-size-x = <800>;
 		touchscreen-size-y = <480>;
 		threshold = <25>;
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
-		//reset-gpios = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
 		linux,wakeup;
 	};
 #endif
 
 #ifdef CONFIG_QBLISSA9R2_CAPTOUCH_MXT224
-	/* Atmel PCAP touch on Touch Connector (I2C) */
+	/* Atmel PCAP touch */
 	mxt224@4a {
 		compatible = "atmel,maxtouch";
 		reg = <0x4a>;
-		/* RESET and IRQ pins must be chosen by the Customer */
-		//interrupt-parent = <&gpio2>;
-		//interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
 		atmel,cfg_name = "atmel/mxt224.cfg";
-		//atmel,reset-gpio = <&gpio2 26 GPIO_ACTIVE_HIGH>;
+		atmel,reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_CAPTOUCH_ILINK
+	/* Ilink PCAP touch */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
 	};
 #endif
 };
-#endif /* CONFIG_QBLISSA9R2_I2C_A */
+#endif /* CONFIG_QBLISSA9R2_I2C_B */
+
+#ifdef CONFIG_QBLISSA9R2_I2C_C
+/* I2C_C (LVDS_DID) is a Soft-I2C */
+&i2c_gpio_c {
+	/* Add devices here */
+};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_I2C_D
+/* I2C_D (LVDS_BLC) is a Soft-I2C */
+&i2c_gpio_d {
+	/* Add devices here */
+};
+#endif
 
 #ifdef CONFIG_QBLISSA9R2_HDMI
 &i2c_gpio_hdmi {
@@ -662,44 +726,38 @@
 #endif
 
 #ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
+/* This is a hardware option for Camera1 if Camera0 has the same I2C address */
 &i2c_gpio_cam1 {
-	ov564x_mipi: ov564x_mipi@3c {
-	compatible = "ovti,ov564x_mipi";
-	reg = <0x3c>;
-	clocks = <&clks 201>;
-	clock-names = "csi_mclk";
-	DOVDD-supply = <&reg_camera_dovdd>;
-	AVDD-supply = <&reg_camera_avdd>;
-	DVDD-supply = <&reg_camera_dvdd>;
-	en-gpios = <&gpio5 24 GPIO_ACTIVE_LOW>;
-	rst-gpios = <&gpio5 23 GPIO_ACTIVE_LOW>;
-	csi_id = <1>;
-	mclk = <24000000>;
-	mclk_source = <0>;
-	};
+	/* Add Camera1 device here */
 };
 #endif
 
-/* PWM_B (Pin 196) */
-&pwm1 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm1_1>;
-	status = "okay";
-};
-
-/* PWM_A (Pin 194) */
-&pwm2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm2_1>;
-	status = "okay";
-};
-
-/* Backlight PWM (X6 Pin 8) */
+#ifdef CONFIG_QBLISSA9R2_PWM_A
+/* PWM_A/LVDS_BLT_CTRL, pin 123 */
 &pwm3 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm3_1>;
+	pinctrl-0 = <&pinctrl_pwm3>;
 	status = "okay";
 };
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_B
+/* PWM_B/FAN_PWMOUT, pin 196 */
+&pwm4 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm4>;
+	status = "okay";
+};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_C
+/* PWM_C/SPKR, pin 194 */
+&pwm1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm1>;
+	status = "okay";
+};
+#endif
 
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
@@ -749,7 +807,7 @@
 #endif
 
 #ifdef CONFIG_QBLISSA9R2_UART_A
-/* UART2 TX/RX on pins 171/177, RTS/CTS on pins 172/178 */
+/* UART_A is implemented via UART2 */
 &uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2_1>;
@@ -758,34 +816,34 @@
 };
 #endif /* CONFIG_QBLISSA9R2_UART_A */
 
-#ifdef CONFIG_QBLISSA9R2_UART_C
-/* UART3 either WLAN/BT, or TX/RX on pins 163/161, RTS/CTS on pins 164/162 */
-&uart3 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart3_1>;
-	fsl,uart-has-rtscts;
-	status = "okay";
-};
-#endif /* CONFIG_QBLISSA9R2_UART_C */
-
-#ifdef CONFIG_QBLISSA9R2_UART_D
-/* UART4 TX/RX on pins 209/208, no RTS/CTS */
+#ifdef CONFIG_QBLISSA9R2_UART_B
+/* UART_B is implemented via UART4 */
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4_1>;
 	status = "okay";
 };
-#endif /* CONFIG_QBLISSA9R2_UART_D */
+#endif /* CONFIG_QBLISSA9R2_UART_B */
 
-#ifdef CONFIG_QBLISSA9R2_UART_E
-/* UART5 TX/RX on pins 186/185, RTS/CTS on pins 188/187 (debug port) */
+#ifdef CONFIG_QBLISSA9R2_UART_C
+/* UART_C is implemented via UART5 (debug port) */
 &uart5 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart5_1>;
 	fsl,uart-has-rtscts;
 	status = "okay";
 };
-#endif /* CONFIG_QBLISSA9R2_UART_E */
+#endif /* CONFIG_QBLISSA9R2_UART_C */
+
+#if defined(CONFIG_QBLISSA9R2_UART_D) || defined(CONFIG_QBLISSA9R2_BLUETOOTH)
+/* UART_Dis implemented via UART3; used for HCI if bluetooth is equipped */
+&uart3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart3_1>;
+	fsl,uart-has-rtscts;
+	status = "okay";
+};
+#endif /* CONFIG_QBLISSA9R2_UART_D || CONFIG_QBLISSA9R2_BLUETOOTH */
 
 &usbotg {
 	pinctrl-names = "default";
@@ -908,7 +966,7 @@
 #elif defined(CONFIG_QBLISSA9R2_LVDS_DUAL_MODE)
 	dual-mode;
 #endif
-	power-supply = <&reg_vlcd>;
+	ldb-supply = <&reg_vldb>;
 	status = "okay";
 
 #ifdef CONFIG_QBLISSA9R2_LVDS0
@@ -976,10 +1034,10 @@
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 				/* VLCD_ON */
-				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x13059
+				MX6QDL_PAD_SD4_DAT3__GPIO2_IO11		0x030b0
 
 				/* VCFL_ON */
-				//MX6QDL_PAD_SD4_DAT0__GPIO2_IO08	0x13059
+				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x030b0
 
 				/* RTC_IRQ */
 				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x030b0
@@ -1005,12 +1063,15 @@
 				MX6QDL_PAD_EIM_DA9__GPIO3_IO09		0x0b0b0
 				/* WATCHDOG OUT */
 				MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x030b0
-				/* WATCHDOG TRIGGER*/
+				/* WATCHDOG TRIGGER */
 				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x0b0b0
 				/* FAN TACHOMETER INPUT */
 				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x0b0b0
 				/* SATA ACT */
 				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x0b0b0
+
+				/* PCIe-RST, also used as touch reset */
+				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14	0x030b0
 			>;
 		};
 
@@ -1087,19 +1148,8 @@
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9R2_UART_C
-		/* UART3 either on WLAN/BT or pins 161-164 */
-		pinctrl_uart3_1: uart3grp-1{
-			fsl,pins = <
-				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D30__UART3_CTS_B		0x1b0b1
-				MX6QDL_PAD_EIM_D31__UART3_RTS_B		0x1b0b1
-			>;
-		};
-#endif
-
-#ifdef CONFIG_QBLISSA9R2_UART_D
+#ifdef CONFIG_QBLISSA9R2_UART_B
+		/* UART4 on pins 208/209 */
 		pinctrl_uart4_1: uart4grp-1{
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL0__UART4_TX_DATA	0x1b0b1
@@ -1108,7 +1158,7 @@
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9R2_UART_E
+#ifdef CONFIG_QBLISSA9R2_UART_C
 		/* UART5 on pins 185-188 (debug port) */
 		pinctrl_uart5_1: uart5grp-1{
 			fsl,pins = <
@@ -1116,6 +1166,18 @@
 				MX6QDL_PAD_KEY_ROW1__UART5_RX_DATA	0x1b0b1
 				MX6QDL_PAD_KEY_ROW4__UART5_CTS_B	0x1b0b1
 				MX6QDL_PAD_KEY_COL4__UART5_RTS_B	0x1b0b1
+			>;
+		};
+#endif
+
+#if defined(CONFIG_QBLISSA9R2_UART_D) || defined(CONFIG_QBLISSA9R2_BLUETOOTH)
+		/* UART3 either on WLAN/BT or pins 161-164 */
+		pinctrl_uart3_1: uart3grp-1{
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b1
+				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b1
+				MX6QDL_PAD_EIM_D30__UART3_CTS_B		0x1b0b1
+				MX6QDL_PAD_EIM_D31__UART3_RTS_B		0x1b0b1
 			>;
 		};
 #endif
@@ -1298,11 +1360,19 @@
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9R2_I2C_C
+		/* Internal I2C, always active */
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT8__GPIO5_IO26	0x4001b8b1
-				MX6QDL_PAD_CSI0_DAT9__GPIO5_IO27	0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b1
+			>;
+		};
+
+#ifdef CONFIG_QBLISSA9R2_I2C_A
+		pinctrl_i2c3: i2c3grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
+				MX6QDL_PAD_GPIO_16__I2C3_SDA		0x4001b8b1
 			>;
 		};
 #endif
@@ -1312,38 +1382,32 @@
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL3__I2C2_SCL		0x4001b8b1
 				MX6QDL_PAD_KEY_ROW3__I2C2_SDA		0x4001b8b1
+				/* IRQ */
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x17000
 			>;
 		};
 #endif
 
-#ifdef CONFIG_QBLISSA9R2_I2C_A
-		/* I2C_A: Feature Connector (SKIT) */
-		pinctrl_i2c3: i2c3grp-1 {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
-				MX6QDL_PAD_GPIO_16__I2C3_SDA		0x4001b8b1
-				/* if AD Converter */
-				//MX6QDL_PAD_SD4_DAT4__GPIO2_IO12	0x80000000
-			>;
-		};
-#endif
-
-		pinctrl_i2c5_gpio: i2c5_gpio_grp {
+#ifdef CONFIG_QBLISSA9R2_I2C_C
+		pinctrl_i2c_gpio_c: i2c_gpio_c_grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x070b1
 				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x070b1
 			>;
 		};
+#endif
 
-		pinctrl_i2c4_gpio: i2c4_gpio_grp {
+#ifdef CONFIG_QBLISSA9R2_I2C_D
+		pinctrl_i2c_gpio_d: i2c_gpio_d_grp {
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT14__GPIO5_IO08	0x070b1
 				MX6QDL_PAD_DISP0_DAT15__GPIO5_IO09	0x070b1
 			>;
 		};
+#endif
 
 #ifdef CONFIG_QBLISSA9R2_HDMI
-		pinctrl_i2c6_gpio: i2c6_gpio_grp {
+		pinctrl_i2c_gpio_hdmi: i2c6_gpio_hdmi_grp {
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT16__GPIO5_IO10	0x03039
 				MX6QDL_PAD_DISP0_DAT17__GPIO5_IO11	0x03039
@@ -1352,40 +1416,43 @@
 #endif
 
 #ifdef CONFIG_QBLISSA9R2_SERIAL_CAMERA
-		pinctrl_i2c7_gpio: i2c7_gpio_grp {
+		pinctrl_i2c_gpio_cam1: i2c_gpio_cam1_grp {
 			fsl,pins = <
 				MX6QDL_PAD_CSI0_DAT14__GPIO6_IO00	0x07048
 				MX6QDL_PAD_CSI0_DAT15__GPIO6_IO01	0x07048
 			>;
 		};
 #endif
-		/* PWM port C - PWM1 */
-		pinctrl_pwm1_1: pwm1grp {
-			fsl,pins = <
-				MX6QDL_PAD_SD4_DAT2__PWM4_OUT		0x110b0
-			>;
-		};
 
-		/* PWM port A - PWM2 */
-		pinctrl_pwm2_1: pwm2grp {
-			fsl,pins = <
-				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x110b0
-			>;
-		};
-
-		/* LVDS backlight control - PWM3 */
-		pinctrl_pwm3_1: pwm3grp {
+#ifdef CONFIG_QBLISSA9R2_PWM_A
+		pinctrl_pwm3: pwm3grp {
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT1__PWM3_OUT		0x110b0
 			>;
 		};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_B
+		pinctrl_pwm4: pwm4grp {
+			fsl,pins = <
+				MX6QDL_PAD_SD4_DAT2__PWM4_OUT		0x110b0
+			>;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_PWM_C
+		pinctrl_pwm1: pwm1grp {
+			fsl,pins = <
+				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x110b0
+			>;
+		};
+#endif
 
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
-				/* PCIe-RST */
-				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14	0x80000000
-				/* PCIe-WAKE */
-				MX6QDL_PAD_NANDF_CS3__GPIO6_IO16	0x80000000
+				/* PCIE_WAKE */
+				MX6QDL_PAD_NANDF_CS3__GPIO6_IO16	0x17000
+				/* PCIE_RST: see above in Hog */
 			>;
 		};
 
