--- a/arch/arm/boot/dts/efusa9dl.dts
+++ b/arch/arm/boot/dts/efusa9dl.dts
@@ -199,7 +199,9 @@ wvga {					\
 /* UART */
 #define CONFIG_EFUSA9_UART_A
 #define CONFIG_EFUSA9_UART_B
+#define CONFIG_EFUSA9_UART_B_RTSCTS
 #define CONFIG_EFUSA9_UART_C
+#define CONFIG_EFUSA9_UART_C_RTSCTS
 #define CONFIG_EFUSA9_UART_D
 
 
