--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -1580,8 +1580,10 @@ lvds_wvga {				\
 			fsl,pins = <
 				MX6SX_PAD_QSPI1B_SS0_B__UART3_TX	0x1b0b1
 				MX6SX_PAD_QSPI1B_SCLK__UART3_RX		0x1b0b1
+#ifdef CONFIG_EFUSA9X_UART_B_RTSCTS
 				MX6SX_PAD_QSPI1B_DATA1__UART3_RTS_B	0x1b0b1
 				MX6SX_PAD_QSPI1B_DATA0__UART3_CTS_B	0x1b0b1
+#endif
 			>;
 		};
 #endif
