--- a/arch/arm/boot/dts/armstonea9q.dts
+++ b/arch/arm/boot/dts/armstonea9q.dts
@@ -145,7 +145,7 @@ wvga {					\
  * - 4-wire/5-wire analog resistive touch (SX8655), on RGB LCD adapter
  * - 4-wire/5-wire analog resistive touch (SX8655), on Touch Connector
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
- * - PCAP touch based on Focaltech controller (FT5x06), on Touch connector
+ * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
  * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
  *
@@ -192,6 +192,7 @@ wvga {					\
 
 /* UART */
 #define CONFIG_ARMSTONEA9_UART_A
+#define CONFIG_ARMSTONEA9_UART_A_RTSCTS
 #define CONFIG_ARMSTONEA9_UART_B
 #define CONFIG_ARMSTONEA9_UART_C
 
