--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -152,7 +152,7 @@ wvga {					\
  *
  * - 4-wire/5-wire analog resistive touch, touch controller on SKIT
  * - 4-wire/5-wire analog resistive touch, touch controller on RGB LCD adapter
- * - PCAP touch based on Maxtouch controller (MXT224, etc), on Touch Connector
+ * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
  * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
@@ -222,7 +222,9 @@ wvga {					\
 /* UART */
 #define CONFIG_EFUSA9_UART_A
 #define CONFIG_EFUSA9_UART_B
+#define CONFIG_EFUSA9_UART_B_RTSCTS
 #define CONFIG_EFUSA9_UART_C
+#define CONFIG_EFUSA9_UART_C_RTSCTS
 #define CONFIG_EFUSA9_UART_D
 
 
