Fix device tree issues found during test
- Reduce I2C speed to 100000 on all boards to be compatible with regular
  (non-highspeed) I2C devices.
- Add missing reset pin for touch I2C on armStoneA9, use smaller pull-up to
  make I2C more safe.
- Change Solo/DualLite name "armStoneA9R2" -> "armStoneA9r2"
- Fix audio clock on armStoneA9r2
- On efusA9, use specific pad settings for GPIO based I2C ports, SPI interrupt
  lines, CAN pads and status LEDs, not simply 0x80000000, which means "no
  change".
- On efusA9x and PicCOMA9X, also exclude epit2 from device tree if SUPPORT_M4
  is active.
- On NetDCUA9, we only have one pwm-backlight for LVDS and LCD, which
  unfortunately needs different settings for our default displays. So we
  set it to inverted if LCD is active, and to regular/normal if not.
- On PicoMODA9, using LCD does not exclude HDMI.
- On QBlissA9, the OTG ID pin has a pull-down instead of a pull-up. If this
  is equipped, which was the default in the past, ID does not work. So add
  CONFIG_QBLISSA9_USB_OTG_HOST to set OTG mode manually.
- On QBlissA9, the CONFIG macros for PWM_A, PWM_B and PWM_C were missing or
  had the wrong macro name (copy-paste error from QBlissA9r2).
- On QBlissA9, the CAN bus was wrong. It is FLEXCAN2.
- Fix comments for CAN port on QBlissA9 and QBlissA9r2.
- On QBlissA9 and QBlissA9r2, disable WLAN and Bluetooth settings by default
  because the WLAN/BT there is deprecated and newer boards will be shipped
  without WLAN/BT.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -642,7 +642,7 @@
 #ifdef CONFIG_ARMSTONEA9_I2C_C
 /* Additional I2C bus on feature connector pins 18, 26 */
 &i2c1 {
-	clock-frequency = <200000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
@@ -693,7 +693,7 @@
 
 #ifdef CONFIG_ARMSTONEA9_I2C_B
 &i2c2 {
-	clock-frequency = <200000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
@@ -1243,7 +1243,10 @@
 				MX6QDL_PAD_GPIO_9__WDOG1_B		0x00008
 
 				/* I2C2_IRQn (SX8655, ext. touch) */
-				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x0b0b0
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x070b0
+
+				/* I2C2_RSTn (SX8655, ext. touch) */
+				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29	0x070b0
 
 				/* camera powerdown - active high */
 				MX6QDL_PAD_CSI0_DAT6__GPIO5_IO24	0x17059
@@ -1456,8 +1459,8 @@
 		/* I2C_C: additonal bus on pins 18 and 26 */
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001b8b1
-				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA		0x4001f8b1
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL		0x4001f8b1
 			>;
 		};
 #endif /* CONFIG_ARMSTONEA9_I2C_C */
