--- a/arch/arm/boot/dts/qblissa9r2q.dts
+++ b/arch/arm/boot/dts/qblissa9r2q.dts
@@ -166,8 +166,8 @@ wvga {					\
 #define CONFIG_QBLISSA9R2_WM9715_AUDIO
 
 /* WLAN/BLUETOOTH */
-#define CONFIG_QBLISSA9R2_WLAN
-#define CONFIG_QBLISSA9R2_BLUETOOTH
+//#define CONFIG_QBLISSA9R2_WLAN
+//#define CONFIG_QBLISSA9R2_BLUETOOTH
 
 /* SD_A - On SKIT: Micro-SD Card Slot, CD always low, WP unused, 4 bit */
 #define CONFIG_QBLISSA9R2_SD_A
