--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -662,7 +662,7 @@
 
 #ifdef CONFIG_EFUSA9_I2C_C
 &i2c1 {
-	clock-frequency = <200000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1_2>;
 	status = "okay";
@@ -737,7 +737,7 @@
 
 #ifdef CONFIG_EFUSA9_I2C_A
 &i2c2 {
-	clock-frequency = <200000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2_2>;
 	status = "okay";
@@ -1183,18 +1183,18 @@
 				/* VBL_ON on SKIT J3  */
 				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x13059
 				/* WDOG1 */
-				MX6QDL_PAD_GPIO_9__WDOG1_B		0x80000000
+				MX6QDL_PAD_GPIO_9__WDOG1_B		0x00008
 				/* camera powerdown - active high */
 				MX6QDL_PAD_CSI0_DAT6__GPIO5_IO24	0x17059
 				/* camera reset - active low */
 				MX6QDL_PAD_CSI0_DAT5__GPIO5_IO23	0x17059
 				/* SW I2C on LVDS connector */
-				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x80000000
-				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x80000000
+				MX6QDL_PAD_SD4_DAT6__GPIO2_IO14		0x4001b8b1
+				MX6QDL_PAD_SD4_DAT7__GPIO2_IO15		0x4001b8b1
 				/* I2C_A IRQ*/
-				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x80000000
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x1b0b0
 				/* I2C_A reset */
-				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29	0x80000000
+				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29	0x1b0b0
 			>;
 		};
 
@@ -1296,13 +1296,13 @@
 		/* IRQs for SPI_A */
 		pinctrl_espi2_1_irq: espi2_1_intgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x80000000
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x1b0b0
 			>;
 		};
 
 		pinctrl_espi2_2_irq: espi2_2_intgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x80000000
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x1b0b0
 			>;
 		};
 
@@ -1332,13 +1332,13 @@
 		/* IRQs for SPI_B */
 		pinctrl_espi1_1_irq: espi1_1_intgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x80000000
+				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x1b0b0
 			>;
 		};
 
 		pinctrl_espi1_2_irq: espi1_2_intgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x80000000
+				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x1b0b0
 			>;
 		};
 #endif /* CONFIG_EFUSA9_SPI_B */
@@ -1396,15 +1396,15 @@
 		/* CAN2 - CAN B */
 		pinctrl_flexcan1_1: flexcan1grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX	0x80000000
-				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x80000000
+				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX	0x1b020
+				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x1b020
 			>;
 		};
 		/* CAN1 - CAN A */
 		pinctrl_flexcan2_1: flexcan2grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x80000000
-				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x80000000
+				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x1b020
+				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x1b020
 			>;
 		};
 
@@ -1590,8 +1590,8 @@
 
 		pinctrl_status_leds: ledgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x80000000
-				MX6QDL_PAD_GPIO_18__GPIO7_IO13		0x80000000
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x030b0
+				MX6QDL_PAD_GPIO_18__GPIO7_IO13		0x030b0
 			>;
 		};
 	};
