Disable internal SNVS-RTC on i.MX6/i.MX6UL
On F&S boards, the internal RTC is not used. We have an external RTC via
I2C. Disable the internal RTC in imx6qdl.dtsi and imx6ul.dtsi by default.
In imx6sx.dtsi, we had done this in the past already.

--- a/arch/arm/boot/dts/imx6ul.dtsi
+++ b/arch/arm/boot/dts/imx6ul.dtsi
@@ -732,6 +732,7 @@
 					regmap = <&snvs>;
 					offset = <0x34>;
 					interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>, <GIC_SPI 20 IRQ_TYPE_LEVEL_HIGH>;
+					status = "disabled";
 				};
 
 				snvs_poweroff: snvs-poweroff {
