--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -58,6 +58,7 @@ CONFIG_MAC80211=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
+CONFIG_AUXILIARY_CORE=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=128
 CONFIG_IMX_WEIM=y
